--- a/SeleniumTests/Resources/PageUrls.resx
+++ b/SeleniumTests/Resources/PageUrls.resx
@@ -174,6 +174,9 @@
   <data name="Shipping" xml:space="preserve">
     <value>https://www.tastefullysimple.com/shipping</value>
   </data>
+  <data name="ShoppingCartUrl" xml:space="preserve">
+    <value>https://www.tastefullysimple.com/shopping-cart</value>
+  </data>
   <data name="SpecialOffers" xml:space="preserve">
     <value>https://www.tastefullysimple.com/special-offers</value>
   </data>
